<resources>
    <plurals name="storage_subtitle">
        <item quantity="one">В %d манге</item>
        <item quantity="few">В %d мангах</item>
        <item quantity="many">В %d мангах</item>
        <item quantity="other">В %d мангах</item>
    </plurals>
    <plurals name="list_chapters_action_selected">
        <item quantity="one">%d выбран</item>
        <item quantity="other">%d выбрано</item>
    </plurals>
    <plurals name="chapters">
        <item quantity="zero">глав</item>
        <item quantity="one">главу</item>
        <item quantity="few">главы</item>
        <item quantity="many">глав</item>
        <item quantity="other">глав.</item>
    </plurals>
    <plurals name="download_service_complete_without_error">
        <item quantity="one">%d глава скачалась без ошибок</item>
        <item quantity="few">%d главы скачались без ошибок</item>
        <item quantity="many">%d глав скачалось без ошибок</item>
        <item quantity="other">%d глав скачалось без ошибок</item>
    </plurals>
    <plurals name="download_service_complete_with_error_start">
        <item quantity="one">%d глава скачалась</item>
        <item quantity="few">%d главы скачались</item>
        <item quantity="many">%d глав скачалось</item>
        <item quantity="other">%d глав скачалось</item>
    </plurals>
    <plurals name="download_service_complete_with_error_end">
        <item quantity="one">c %d ошибкой</item>
        <item quantity="other">с %d ошибками</item>
    </plurals>
    <plurals name="statistic_item_full_pages">
        <item quantity="one">страница</item>
        <item quantity="few">страницы</item>
        <item quantity="many">страниц</item>
        <item quantity="other">страниц</item>
    </plurals>
    <plurals name="statistic_item_full_chapters">
        <item quantity="one">главе</item>
        <item quantity="few">главах</item>
        <item quantity="many">главах</item>
        <item quantity="other">главах</item>
    </plurals>
    <plurals name="statistic_item_full_times">
        <item quantity="one">раз</item>
        <item quantity="few">раза</item>
        <item quantity="many">раз</item>
        <item quantity="other">раз</item>
    </plurals>
    <string name="app_name" translatable="false">Manger</string>
    <string name="app_name_version" translatable="false">Manger: %s</string>
    <string name="main_check_app_ver_find">Найденная версия: %1$s.\nТекущая версия: %2$s</string>
    <string name="main_check_app_ver_no_find">У вас установленна актуальная версия</string>
    <string name="main_check_app_ver_go_to">Перейти на 4pda.ru</string>
    <string name="main_check_app_ver_error">Произошла ошибка при поиске обновлений, возможно у вас интернет отключен</string>
    <string name="main_permission_error">Данное приложение превратилось в тыкву</string>
    <string name="main_permission_nonpermission">Вы запретили данному приложению доступ к памяти смартфона и оно превратилось в тыкву. Если оно вам все еще нужно, то в настройках можно это исправить</string>
    <string name="main_permission_request">Показать запрос</string>
    <string name="main_permission_no_rationale">Больше не просить</string>
    <string name="main_permission_reason">Данное приложение использует доступ к памяти смартфона
    для хранения манги для возможности читать ее в любой момент. Для работы требуется ваше согласие.</string>
    <string name="edit_manga_title">Редактор манги</string>
    <string name="add_manga_ready">Готово</string>
    <string name="add_manga_name">Название</string>
    <string name="add_manga_author">Автор</string>
    <string name="add_manga_about">Описание</string>
    <string name="add_manga_categories">Категории</string>
    <string name="add_manga_genres">Жанры</string>
    <string name="add_manga_path">Путь к папке</string>
    <string name="add_manga_status">Статус</string>
    <string name="add_manga_site">Ссылка</string>
    <string name="add_manga_color">Цвет элемента</string>
    <string name="add_manga_logo">Логотип</string>
    <string name="add_manga_update">Обновление манги</string>
    <string name="add_manga_update_available">Разрешить?</string>
    <string name="add_manga_close_btn">Закрыть</string>
    <string name="about_manga_dialog_name">Название</string>
    <string name="about_manga_dialog_category">Категория</string>
    <string name="about_manga_dialog_authors">Авторы</string>
    <string name="about_manga_dialog_status_edition">Статус выпуска</string>
    <string name="about_manga_dialog_genres">Жанры</string>
    <string name="about_manga_dialog_storage">Место хранения</string>
    <string name="about_manga_dialog_volume">Текущий объем</string>
    <string name="about_manga_dialog_link">Ссылка на источник</string>
    <string name="about_manga_dialog_about">Описание</string>
    <string name="about_manga_dialog_logo">Лого</string>
    <string name="about_manga_dialog_calculate">Считаю…</string>
    <string name="about_manga_dialog_close">Закрыть</string>
    <string name="about_manga_dialog_edit">Редактировать</string>
    <string name="catalog_for_one_site_prefix_volume">Глав %d</string>
    <string name="catalog_for_one_site_search">Поиск</string>
    <string name="catalog_for_one_site_update_all">Обновить данные сайтов</string>
    <string name="catalog_for_one_site_update_catalog_contain">Обновить содержимое катологов</string>
    <string name="catalog_for_one_site_global_search">Глобальный поиск</string>
    <string name="catalog_fot_one_site_warning">Внимание</string>
    <string name="catalog_fot_one_site_redownload_text">Нужно ваше согласие на обновление каталога</string>
    <string name="catalog_fot_one_site_redownload_ok">Согласен</string>
    <string name="catalog_fot_one_site_redownload_cancel">Не согласен</string>
    <string name="add_manga_screen_add_new">Будет созданна новая категория</string>
    <string name="add_manga_screen_title">Добавление манги</string>
    <string name="add_manga_screen_item">Выберете категорию</string>
    <string name="add_manga_screen_continue">Продолжить</string>
    <string name="add_manga_screen_created_category">Создание категории: %s</string>
    <string name="add_manga_screen_changed_category">Категория выбрана: %s</string>
    <string name="add_manga_screen_created_folder">Создаю папки для манги</string>
    <string name="add_manga_screen_update_manga">Обновляю информацию и добавляю в библиотеку</string>
    <string name="add_manga_screen_added_manga">Новая манга добавлена в библиотеку</string>
    <string name="add_manga_screen_search_chapters">Запуск задачи по поиску глав</string>
    <string name="add_manga_screen_all_complete">Все работы завершены успешно</string>
    <string name="add_manga_screen_error">Во время работы произошла ошибка, проверьте подключение к интеренету</string>
    <string name="manga_info_dialog_name">Название</string>
    <string name="manga_info_dialog_authors">Авторы</string>
    <string name="manga_info_dialog_type">Тип</string>
    <string name="manga_info_dialog_status_edition">Статус выпуска</string>
    <string name="manga_info_dialog_volume">Объем</string>
    <string name="manga_info_dialog_status_translate">Статус перевода</string>
    <string name="manga_info_dialog_genres">Жанры</string>
    <string name="manga_info_dialog_link">Ссылка на источник</string>
    <string name="manga_info_dialog_about">Описание</string>
    <string name="manga_info_dialog_logo">Лого</string>
    <string name="manga_info_dialog_add">Добавить</string>
    <string name="manga_info_dialog_close">Закрыть</string>
    <string name="manga_info_dialog_title">Информация о манге</string>
    <string name="manga_info_dialog_loading">Загрузка…</string>
    <string name="manga_info_dialog_loading_failed">Не удалось загрузить картинку</string>
    <string name="manga_info_dialog_not_image">Картинки то нет</string>
    <string name="manga_error_dialog_title">Внимание</string>
    <string name="manga_error_dialog_message">При обновлении каталога произошла ошибка.
    Проверьте наличие интернета. Проверьте работу других каталогов. Попробуйте зайти на сайт этого
    каталога через браузер. Если все вышеперечисленное сработало, а каталог так и необновляется,
    значит в сайте произошли изменения и парсер не может с ними справится. Сообщите автору
    приложения, пусть он исправит парсер.</string>
    <string name="catalog_fos_service_action_cancel_all">Отменить все</string>
    <string name="catalog_fos_service_notify_title">Обновление каталогов: %d шт.</string>
    <string name="catalog_fos_service_notify_text">Подготовка каталога %s к загрузке</string>
    <string name="catalog_fos_service_notify_title_2">Обновление %d шт.</string>
    <string name="catalog_fos_service_notify_complete">Обновление каталогов завершенно</string>
    <string name="catalog_fos_service_notify_manual_stop_text">Вы сами это сделали</string>
    <string name="catalog_fos_service_notify_manual_stop_title">Обновление каталогов отменено</string>
    <string name="catalog_fos_service_notify_error_title">Обновление каталогов завершенно с ошибкой</string>
    <string name="catalog_fos_service_notify_error_text">Проверьте подключение к интернету</string>
    <string name="app_update_service_action_cancel_all">Отменить все</string>
    <string name="app_update_service_title">Поиск обновлений приложения</string>
    <string name="viewer_chapters_text">Главы: %1$d/%2$d</string>
    <string name="viewer_pages_text">Страницы: %1$d/%2$d</string>
    <string name="viewer_page_next_text">Для перехода на следующую главу нажмите на экран</string>
    <string name="viewer_page_prev_text">Для перехода на предыдущую главу нажмите на экран</string>
    <string name="viewer_page_none_next_text">Увы но еще одной главы нет, мне очень жаль.</string>
    <string name="viewer_page_none_prev_text">Эта самая первая глава, ничего первее быть не должно</string>
    <string name="viewer_page_close">Закончить чтение</string>
    <string name="first_run_exit_text">Двойное нажатие закроет приложение</string>
    <string name="main_menu_library">Библиотека</string>
    <string name="main_menu_library_count">Библиотека: %d</string>
    <string name="main_menu_storage">Хранилище</string>
    <string name="main_menu_storage_size_mb">%s Мб</string>
    <string name="main_menu_category">Категории</string>
    <string name="main_menu_catalogs">Каталоги</string>
    <string name="main_menu_downloader">Загрузчик</string>
    <string name="main_menu_downloader_count">Загрузчик: %d</string>
    <string name="main_menu_latest">Обновления</string>
    <string name="main_menu_latest_count">Обновления: %d</string>
    <string name="main_menu_settings">Настройки</string>
    <string name="main_menu_search">Поиск</string>
    <string name="main_menu_item_catalogs">%1$d - %2$d</string>
    <string name="main_menu_schedule">Расписание</string>
    <string name="main_menu_statistic">Статистика</string>
    <string name="storage_title_size">Хранилище: %s Мб</string>
    <string name="storage_not_in_bd">Нет в базе</string>
    <string name="settings_library_title">Настройки библиотеки</string>
    <string name="settings_list_chapter_title">Настройки списка глав</string>
    <string name="settings_list_chapter_filter_default">true</string>
    <string name="settings_list_chapter_filter_key">chapter_filter</string>
    <string name="settings_list_chapter_filter_summary">Фильтрация в списке глав общая для всей манги или независимая</string>
    <string name="settings_list_chapter_filter_title">Индивидуальная фильтрация глав</string>
    <string name="settings_list_chapter_title_default">true</string>
    <string name="settings_list_chapter_title_key">chapter_title</string>
    <string name="settings_list_chapter_title_summary">Переключение видимости названия вкладок</string>
    <string name="settings_list_chapter_title_title">Отображение названия вкладок</string>
    <string name="settings_viewer_title">Настройки читалки</string>
</resources>