<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <PreferenceCategory
        android:title="@string/settings_library_title">
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_list_chapter_title">
        <SwitchPreference
            android:key="@string/settings_list_chapter_filter_key"
            android:defaultValue="@string/settings_list_chapter_filter_default"
            android:summary="@string/settings_list_chapter_filter_summary"
            android:title="@string/settings_list_chapter_filter_title"
            />
        <SwitchPreference
            android:key="@string/settings_list_chapter_title_key"
            android:defaultValue="@string/settings_list_chapter_title_default"
            android:summary="@string/settings_list_chapter_title_summary"
            android:title="@string/settings_list_chapter_title_title"
            />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/settings_viewer_title">
    </PreferenceCategory>

    <PreferenceCategory android:title="Настройки загрузчика">
    </PreferenceCategory>

</PreferenceScreen>
